@startuml

title __EVALUATION's Class Diagram__\n

  namespace pique.evaluation {
    class pique.evaluation.BenchmarkMeasureEvaluator {
        + evaluate()
    }
  }
  

  namespace pique.evaluation {
    class pique.evaluation.DefaultDiagnosticEvaluator {
        + evaluate()
    }
  }
  

  namespace pique.evaluation {
    class pique.evaluation.DefaultFactorEvaluator {
        + evaluate()
    }
  }
  

  namespace pique.evaluation {
    class pique.evaluation.DefaultFindingEvaluator {
        + evaluate()
    }
  }
  

  namespace pique.evaluation {
    class pique.evaluation.DefaultMeasureEvaluator {
        + evaluate()
    }
  }
  

  namespace pique.evaluation {
    class pique.evaluation.DefaultNormalizer {
        + normalize()
    }
  }
  

  namespace pique.evaluation {
    class pique.evaluation.DefaultProductFactorEvaluator {
        + evaluate()
    }
  }
  

  namespace pique.evaluation {
    class pique.evaluation.DefaultUtility {
        + utilityFunction()
        - linearInterpolationTwoPoints()
    }
  }
  

  namespace pique.evaluation {
    abstract class pique.evaluation.Evaluator {
        # name : String
        + getName()
    }
  }
  

  namespace pique.evaluation {
    interface pique.evaluation.IEvaluator {
        {abstract} + evaluate()
        {abstract} + getName()
    }
  }
  

  namespace pique.evaluation {
    interface pique.evaluation.INormalizer {
        {abstract} + getName()
        {abstract} + normalize()
        {abstract} + setNormalizerValue()
    }
  }
  

  namespace pique.evaluation {
    interface pique.evaluation.IUtilityFunction {
        {abstract} + utilityFunction()
    }
  }
  

  namespace pique.evaluation {
    class pique.evaluation.LoCEvaluator {
        + evaluate()
    }
  }
  

  namespace pique.evaluation {
    abstract class pique.evaluation.Normalizer {
        # name : String
        # normalizerValue : BigDecimalWithContext
        + getName()
        + setNormalizerValue()
    }
  }
  

  namespace pique.evaluation {
    class pique.evaluation.Project {
        - linesOfCode : int
        - name : String
        - path : Path
        + Project()
        + Project()
        + Project()
        + addFindings()
        + evaluateCharacteristics()
        + evaluateMeasures()
        + evaluateProperties()
        + evaluateTqi()
        + exportToJson()
        + getLinesOfCode()
        + getName()
        + getPath()
        + getQualityModel()
        + setLinesOfCode()
        + setName()
        + setPath()
        + setQualityModel()
        + updateDiagnosticsWithFindings()
    }
  }
  

  pique.evaluation.BenchmarkMeasureEvaluator -up-|> pique.evaluation.Evaluator
  pique.evaluation.DefaultDiagnosticEvaluator -up-|> pique.evaluation.Evaluator
  pique.evaluation.DefaultFactorEvaluator -up-|> pique.evaluation.Evaluator
  pique.evaluation.DefaultFindingEvaluator -up-|> pique.evaluation.Evaluator
  pique.evaluation.DefaultMeasureEvaluator -up-|> pique.evaluation.Evaluator
  pique.evaluation.DefaultNormalizer -up-|> pique.evaluation.Normalizer
  pique.evaluation.DefaultProductFactorEvaluator -up-|> pique.evaluation.Evaluator
  pique.evaluation.DefaultUtility .up.|> pique.evaluation.IUtilityFunction
  pique.evaluation.Evaluator .up.|> pique.evaluation.IEvaluator
  pique.evaluation.LoCEvaluator -up-|> pique.evaluation.Evaluator
  pique.evaluation.Normalizer .up.|> pique.evaluation.INormalizer
  pique.evaluation.Project o-- pique.model.QualityModel : qualityModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
